Change the styling for h2, fix spacing for profile page, fix button signout

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -143,9 +143,12 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  font-size: 22px;
-  font-weight: bold;
-  color: $text;
   margin-top: .8em;
   padding: 0;
+
+  .title-h2 {
+    font-size: 22px;
+    font-weight: bold;
+    color: $text;
+  }
 }
